fix readability on product and selfie cards

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6562,14 +6562,15 @@ c {
   filter: brightness(0.6);
   -webkit-filter: brightness(0.6); }
 
-.hovereffect h2 {
+.hovereffect h5 {
   text-transform: uppercase;
   text-align: center;
   position: relative;
+  border-radius: 2px;
   font-size: 17px;
-  background-color: transparent;
-  color: #fff;
-  padding: 1em 0;
+  background-color: #fff;
+  color: #616161;
+  padding: 0.5em 0;
   opacity: 0;
   filter: alpha(opacity=0);
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
@@ -6580,6 +6581,8 @@ c {
 .hovereffect a,
 .hovereffect p {
   color: #fff;
+  background-color: #616161;
+  border-radius: 2px;
   padding: 1em 0;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -6590,7 +6593,7 @@ c {
 
 .hovereffect:hover a,
 .hovereffect:hover p,
-.hovereffect:hover h2 {
+.hovereffect:hover h5 {
   opacity: 1;
   filter: alpha(opacity=100);
   -webkit-transform: translate3d(0, 0, 0);
